@@ -78,7 +78,7 @@ typedef enum {
   GST_BUFFER_SUBBUFFER  = GST_DATA_FLAG_LAST,
   GST_BUFFER_ORIGINAL,
   GST_BUFFER_DONTFREE,
-  GST_BUFFER_KEY_UNIT,
+  GST_BUFFER_KEY_UNIT,		/* sync point in the stream */
   GST_BUFFER_DONTKEEP,
   GST_BUFFER_IN_CAPS,
   GST_BUFFER_FLAG_LAST 	= GST_DATA_FLAG_LAST + 8
